# mbta

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
mbta/: __main__.py  config.py  enums.py  main.py  models.py  shared.py
tests/: conftest.py  test_main.py  test_models.py
tests/data/: prediction.json  route.json  stop.json
tests/data/mock_api/: predictions?filter%5Broute%5D=Red&filter%5Bdirection_id%5D=0&filter%5Bstop%5D=place-alfcl  predictions?filter%5Broute%5D=Red&filter%5Bdirection_id%5D=1&filter%5Bstop%5D=place-alfcl  routes?filter%5Btype%5D=0%2C1  stops?filter%5Broute%5D=Red
