[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.coverage.report]
omit = [
  "mbta/__main__.py",
]
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
disable_warnings = ["no-data-collected"]
source = ["mbta"]

[tool.poetry]
name = "mbta"
version = "0.1.0"
description = "A simple utility to find the next train for a particular stop on the MBTA T network"
authors = ["James Roeder <jmaroeder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
singletons = "^0.2.5"
jsonapi-requests = "^0.6.2"
jsonapi-client = "^0.9.9"
requests-toolbelt = "^0.9.1"
pymbta3 = "^0.0.3-alpha.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
mbta = "mbta.main:app"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
log_level = "INFO"
log_cli = true
log_cli_level = "WARNING"
minversion = "6.0"
testpaths = ["tests"]
